<resources>
    <string name="app_name">Ready2Walk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="Sessions">Sessions</string>

    <!--Name of Strings Used in User Info -->
    <string name="user_name"> Bobby </string>
    <string name="user_height"> 153 </string>
    <string name="user_weight"> 65 </string>
    <string name="user_info1"> Name: </string>
    <string name="user_info2"> Height: </string>
    <string name="user_info3"> Weight: </string>
    <string name="user_info4"> Age: </string>
    <string name="user_info5"> Gender:</string>

    <string name="save"> Save </string>
    <string name="cancel"> Cancel </string>

    <!-- Name of App Pages (Activities). Please make the names all begin with Capital Letters-->
    <string name="Home"> BME Capstone Project</string>
    <string name="Sampling"> Sampling </string>
    <string name="UserInfo"> User Info</string>
    <string name="Instruction"> User Manual </string>
    <string name="Files"> Sampling Files</string>

</resources>
