<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cauliflower.ready2walk.UI.UserInfoFragment">
    android:orientation="horizontal"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"


    <TextView
        android:id="@+id/UserInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="3dp"
        android:text="@string/user_info1" />
    <TextView
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/UserInfo1"
        android:text="@string/user_name" />

    <TextView
        android:id="@+id/UserInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/UserName"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="3dp"
        android:text="@string/user_info2" />
    <TextView
        android:id="@+id/UserHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/UserInfo1"
        android:layout_toRightOf="@id/UserInfo2"
        android:text="@string/user_height"/>
    <TextView
        android:id="@+id/UserUnit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/UserHeight"
        android:layout_below="@id/UserInfo1"
        android:text="@string/user_unit2" />

    <TextView
        android:id="@+id/UserInfo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/UserInfo2"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="3dp"
        android:text="@string/user_info3" />
    <TextView
        android:id="@+id/UserWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/UserInfo3"
        android:layout_marginRight="3dp"
        android:layout_below="@id/UserInfo2"
        android:text="@string/user_weight"/>
    <TextView
        android:id="@+id/UserUnit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/UserInfo2"
        android:layout_toRightOf="@id/UserWeight"
        android:layout_marginRight="3dp"
        android:text="@string/user_unit3"/>

    <!--User Input-->
    <EditText
        android:id="@+id/editText"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/UserInfo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/UserWeight"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="3dp"
        android:text="Age:"/>
    <TextView
        android:id="@+id/UserAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/UserInfo4"
        android:layout_marginRight="3dp"
        android:layout_below="@id/UserInfo3"
        android:text="22"/>
    <TextView
        android:id="@+id/UserUnit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/UserAge"
        android:layout_below="@id/UserInfo3"
        android:text="Years"/>

    <TextView
        android:id="@+id/UserInfo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/UserAge"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="3dp"
        android:text="Gender:"/>
    <TextView
        android:id="@+id/UserGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/UserInfo5"
        android:layout_marginRight="3dp"
        android:layout_below="@id/UserInfo4"
        android:text="Male"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerHorizontal="true"
        android:text="Update Info" />
    <!--android:onClick="sendMessage" -->
    <!--android:layout_below="@id/UserName" -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/UserGender"
        >

    <Button
        android:id="@+id/ButtonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_weight="1"
        android:layout_below="@id/UserGender"
        android:text="@string/save"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/UserGender"
        android:layout_marginRight="40dp"
        android:layout_toRightOf="@id/ButtonSave"
        android:layout_weight="1"
        android:text="@string/cancel"/>
    </LinearLayout>

</RelativeLayout>